--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,2 +1,8 @@
-hwdec=auto
 save-position-on-quit=yes
+volume=50
+sub-auto=fuzzy
+geometry=60%:60%
+autofit-larger=70%x70%
+hwdec=auto
+slang=chi,cn,en,eng
+sub-scale=0.6
