--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,4 +1,4 @@
-font=UbuntuMonoNerdFont:size=14
+font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
 [main]
 include=/usr/share/foot/themes/monokai-pro
 [environment]
