--- a/config_dir/i3status/config
+++ b/config_dir/i3status/config
@@ -25,6 +25,7 @@ order += "tztime local"
 cpu_temperature 0 {
         format = "T: %degrees °C"
         path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
+        # path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
 }
 
 volume master {
@@ -48,15 +49,15 @@ battery all {
 }
 
 disk "/" {
-        format = "%avail"
+        format = "Disk: %avail"
 }
 
 load {
-        format = "%1min"
+        format = "Load: %1min"
 }
 
 memory {
-        format = "%used | %available"
+        format = "Mem: %used | %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
