--- a/tmux.conf
+++ b/tmux.conf
@@ -4,10 +4,10 @@
 set -g status-bg black
 set -g status-fg white
 
-set-option -g status-justify centre
+#set-option -g status-justify centre
 
 set-option -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
-set-option -g status-left-length 20
+#set-option -g status-left-length 20
 
 setw -g automatic-rename on
 set-window-option -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
@@ -16,3 +16,9 @@ set-window-option -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#
 set-window-option -g mode-keys vi
 set -g status-right '#[fg=green][#[fg=cyan]%H:%M#[fg=green]] #[fg=green][#[fg=cyan]%Y-%m-%d#[fg=green]]'
 set -g default-terminal "screen-256color"
+bind-key X set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
+bind-key @ select-pane -d
+bind-key e select-pane -e
+
+bind-key j command-prompt -p "send pane to: " "join-pane -t '%%'"
