--- a/tmux.conf
+++ b/tmux.conf
@@ -22,3 +22,5 @@ bind-key @ select-pane -d
 bind-key e select-pane -e
 
 bind-key j command-prompt -p "send pane to: " "join-pane -t '%%'"
+
+source "/usr/share/powerline/bindings/tmux/powerline.conf"
