--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@
 
 set -g status-bg black
 set -g status-fg white
+set -g mouse on
 
 #set-option -g status-justify centre
 
@@ -18,9 +19,34 @@ set -g status-right '#[fg=green][#[fg=cyan]%H:%M#[fg=green]] #[fg=green][#[fg=cy
 set -g default-terminal "screen-256color"
 bind-key X set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
+# Target needs to be session:window like 0:1
+bind-key j command-prompt -p "send pane to: " "join-pane -t '%%'"
+
 bind-key @ select-pane -d
 bind-key e select-pane -e
 
-bind-key j command-prompt -p "send pane to: " "join-pane -t '%%'"
+bind-key    -T root         MouseDown3Pane       if-shell -F -t = "#{||:#{mouse_any_flag},#{pane_in_mode}}" "select-pane -t=; send-keys -M" "display-menu -t= -xM -yM -T \"#[align=centre]#{pane_index} (#{pane_id})\"  '#{?mouse_word,Search For #[underscore]#{=/9/...:mouse_word},}' 'C-r' {copy-mode -t=; send -Xt= search-backward \"#{q:mouse_word}\"} '#{?mouse_word,Type #[underscore]#{=/9/...:mouse_word},}' 'C-y' {send-keys -l -- \"#{q:mouse_word}\"} '#{?mouse_word,Copy #[underscore]#{=/9/...:mouse_word},}' 'c' {set-buffer -- \"#{q:mouse_word}\"} '#{?mouse_line,Copy Line,}' 'l' {set-buffer -- \"#{q:mouse_line}\"} '' 'Horizontal Split' 'h' {split-window -h} 'Vertical Split' 'v' {split-window -v} '' 'Swap Up' 'u' {swap-pane -U} 'Swap Down' 'd' {swap-pane -D} '#{?pane_marked_set,,-}Swap Marked' 's' {swap-pane} '' 'Kill' 'X' {kill-pane} 'Respawn' 'R' {respawn-pane -k} '#{?pane_marked,Unmark,Mark}' 'm' {select-pane -m} '#{?window_zoomed_flag,Unzoom,Zoom}' 'z' {resize-pane -Z} '#{?pane_input_off,Enable,Disable}' q '#{?pane_input_off,select-pane -e,select-pane -d}' '#{?pane_synchronized,Unsync,Sync}' S 'set-window-option synchronize-panes'"
+
+bind-key -n C-s display-menu -x W -y S \
+    "New window"        c   "new-window" \
+    "Previous window"   <   "previous-window" \
+    "Next window"       >   "next-window" \
+    "" \
+    "Horizontal Split"  h   {split-window -h} \
+    "Vertical Split"    v   {split-window -v} \
+    "" \
+    "#{?pane_input_off,Enable,Disable}"         q   "#{?pane_input_off,select-pane -e,select-pane -d}" \
+    "#{?pane_synchronized,Unsync,Sync} panes"   s   "set-window-option synchronize-panes" \
+
+bind-key b display-menu -x W -y S \
+    "New window"        c   "new-window" \
+    "Previous window"   <   "previous-window" \
+    "Next window"       >   "next-window" \
+    "" \
+    "Horizontal Split"  h   {split-window -h} \
+    "Vertical Split"    v   {split-window -v} \
+    "" \
+    "#{?pane_input_off,Enable,Disable}"         q   "#{?pane_input_off,select-pane -e,select-pane -d}" \
+    "#{?pane_synchronized,Unsync,Sync} panes"   s   "set-window-option synchronize-panes" \
 
 source "/usr/share/powerline/bindings/tmux/powerline.conf"
