--- a/config_dir/foot/foot.ini
+++ b/config_dir/foot/foot.ini
@@ -1,4 +1,5 @@
-font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
+font=UbuntuMono:size=14,NotoSansCJK:size=12
+# font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
 [main]
 include=/usr/share/foot/themes/monokai-pro
 [environment]
