--- a/config_dir/sway/config
+++ b/config_dir/sway/config
@@ -5,7 +5,8 @@ set $up k
 set $right l
 set $term foot
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill scale 2
+#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 exec swayidle -w \
         timeout 300 'swaylock -f -c 00ffff' \
         timeout 360 'swaymsg "output * power off"' \
@@ -96,7 +97,8 @@ bar {
     position top
     status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
     status_command i3status
-    font "UbuntuMonoNerdFont 12"
+    #font "UbuntuMonoNerdFont 12"
+    font "UbuntuMono 12"
     colors {
         statusline #ffffff
         background #323232
