[update] sway config

--- a/config_dir/sway/config
+++ b/config_dir/sway/config
@@ -5,8 +5,11 @@ set $up k
 set $right l
 set $term foot
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill scale 2
-#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+# swaymsg -t get_outputs
+# swaymsg -t get_inputs
+# swaymsg -t get_tree
+output eDP-1 bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill scale 2
+#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill mode 111x222@60Hz
 exec swayidle -w \
         timeout 300 'swaylock -f -c 00ffff' \
         timeout 360 'swaymsg "output * power off"' \
@@ -17,7 +20,11 @@ input "type:keyboard" {
     xkb_options ctrl:nocaps
 }
 input "type:touchpad" {
+    click_method clickfinger
     natural_scroll enabled
+    tap enabled
+    tap_button_map lrm
+    dwt enabled
 }
     bindsym $mod+Return exec $term
     bindsym $mod+Shift+q kill
@@ -97,8 +104,8 @@ bar {
     position top
     status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
     status_command i3status
-    #font "UbuntuMonoNerdFont 12"
-    font "UbuntuMono 12"
+    font "UbuntuMonoNerdFont 12"
+    # font "UbuntuMono 12"
     colors {
         statusline #ffffff
         background #323232
