--- a/config_dir/mpv/mpv.conf
+++ b/config_dir/mpv/mpv.conf
@@ -1,8 +1,9 @@
 save-position-on-quit=yes
 volume=80
 sub-auto=fuzzy
-geometry=60%:60%
-autofit-larger=70%x70%
 hwdec=auto
 slang=chi,cn,en,eng
 sub-scale=0.6
+# Following two options should be disable in sway
+geometry=60%:60%
+autofit-larger=70%x70%
