--- a/config_dir/mpv/mpv.conf
+++ b/config_dir/mpv/mpv.conf
@@ -7,3 +7,6 @@ sub-scale=0.6
 # Following two options should be disable in sway
 geometry=60%:60%
 autofit-larger=70%x70%
+# Following maybe needed in sway
+# vo=gpu-next
+# gpu-api=vulkan
