--- a/config_dir/ranger/rc.conf
+++ b/config_dir/ranger/rc.conf
@@ -1,6 +1,7 @@
 # ranger
 map aa cd /data02/username/aria2
 map tt cd /data03/TVs
-map mm shell LIBVA_DRIVER_NAME=iHD mpv %s
+# map mm shell LIBVA_DRIVER_NAME=iHD mpv %s
+map mm shell mpv %s
 set preview_files false
 set preview_images false
