--- a/config_dir/i3status/config
+++ b/config_dir/i3status/config
@@ -11,7 +11,7 @@ general {
         interval = 5
 }
 
-order += "ipv6"
+# order += "ipv6"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "cpu_temperature 0"
@@ -25,7 +25,6 @@ order += "tztime local"
 cpu_temperature 0 {
         format = "T: %degrees °C"
         path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
-        # path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
 }
 
 volume master {
