--- a/config_dir/foot/foot.ini
+++ b/config_dir/foot/foot.ini
@@ -1,5 +1,6 @@
 # font=UbuntuMono:size=14,NotoSansCJK:size=12
-font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
+# font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
+font=monospace:size=14
 [main]
 include=/usr/share/foot/themes/monokai-pro
 [environment]
@@ -9,6 +10,7 @@ include=/usr/share/foot/themes/monokai-pro
 [cursor]
 [mouse]
 [colors]
+alpha=0.9
 [csd]
 [key-bindings]
 [search-bindings]
