[update] config: better foot

--- a/config_dir/foot/foot.ini
+++ b/config_dir/foot/foot.ini
@@ -2,15 +2,16 @@
 # font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
 font=monospace:size=14
 [main]
-include=/usr/share/foot/themes/material-design
+# include=/usr/share/foot/themes/material-design
 [environment]
 [bell]
 [scrollback]
 [url]
 [cursor]
+style=beam
 [mouse]
 [colors]
-alpha=0.9
+alpha=0.93
 [csd]
 [key-bindings]
 [search-bindings]
