--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,8 @@
 
 set -g status-bg black
 set -g status-fg white
+set -g pane-border-status bottom
+set -g pane-border-format "#{pane_index} #{pane_current_command}"
 
 #set-option -g status-justify centre
 
