--- a/config_dir/foot/foot.ini
+++ b/config_dir/foot/foot.ini
@@ -1,6 +1,6 @@
 # font=UbuntuMono:size=14,NotoSansCJK:size=12
-# font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
-font=monospace:size=14
+font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
+# font=monospace:size=14
 [main]
 # include=/usr/share/foot/themes/material-design
 [environment]
