--- a/config_dir/mpv/mpv.conf
+++ b/config_dir/mpv/mpv.conf
@@ -8,5 +8,5 @@ sub-scale=0.6
 geometry=60%:60%
 autofit-larger=70%x70%
 # Following maybe needed in sway
-# vo=gpu-next
-# gpu-api=vulkan
+vo=gpu-next
+gpu-api=vulkan
