--- a/config_dir/sway/config
+++ b/config_dir/sway/config
@@ -14,7 +14,7 @@ output * {
     bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # scale 2
     # position 0 0  # Note: position is divided by scale
-    # mode 111x222@60
+    # mode 111x222@60Hz
 }
 
 # If multi-head, select one
@@ -25,14 +25,16 @@ output * {
 # workspace 2 output DP-1
 
 exec swayidle -w \
-        timeout 300 'swaylock -f -c 00ffff -e -i /usr/share/backgrounds/gnome/adwaita-d.webp' \
+        timeout 300 'swaylock -f -c 00ffff -e -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png' \
         timeout 360 'swaymsg "output * power off"' \
         timeout 60 'if pgrep -x swaylock; then swaymsg "output * power off"; fi' \
         resume 'swaymsg "output * power on"' \
-        before-sleep 'swaylock -f -c 00ffff -e -i /usr/share/backgrounds/gnome/adwaita-d.webp'
+        before-sleep 'swaylock -f -c 00ffff -e -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png'
+
 input "type:keyboard" {
     xkb_options ctrl:nocaps
 }
+
 input "type:touchpad" {
     click_method clickfinger
     natural_scroll enabled
