--- a/config_dir/i3status/config
+++ b/config_dir/i3status/config
@@ -24,7 +24,7 @@ order += "tztime local"
 
 cpu_temperature 0 {
         format = "T: %degrees °C"
-        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon*/temp1_input"
 }
 
 volume master {
