[update] better sway

--- a/config_dir/foot/foot.ini
+++ b/config_dir/foot/foot.ini
@@ -11,7 +11,8 @@ font=UbuntuMonoNerdFont:size=14,SourceHanSansCN:size=12
 style=beam
 [mouse]
 [colors]
-alpha=0.93
+# alpha=0.93
+alpha=0.8
 [csd]
 [key-bindings]
 [search-bindings]
