--- a/config_dir/sway/config
+++ b/config_dir/sway/config
@@ -11,11 +11,12 @@ set $menu dmenu_path | dmenu | xargs swaymsg exec --
 # swaymsg -t get_tree
 
 output * {
-    bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+    # Install hyprland
+    bg /usr/share/hyprland/wall2.png fill
     # scale and mode can be setup later, run sway directly and use swaymsg -t get_outputs to get monitors and modes
     # scale 2
     # position 0 0  # Note: position is divided by scale
-    # mode 111x222@60Hz
+    # mode 3840x2160@60Hz
 }
 
 # If multi-head, select one
@@ -26,11 +27,11 @@ output * {
 # workspace 2 output DP-1
 
 exec swayidle -w \
-        timeout 300 'swaylock -f -c 00ffff -e -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png' \
+        timeout 300 'swaylock -f -c 00ffff -e -i /usr/share/hyprland/wall2.png' \
         timeout 360 'swaymsg "output * power off"' \
         timeout 60 'if pgrep -x swaylock; then swaymsg "output * power off"; fi' \
         resume 'swaymsg "output * power on"' \
-        before-sleep 'swaylock -f -c 00ffff -e -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png'
+        before-sleep 'swaylock -f -c 00ffff -e -i /usr/share/hyprland/wall2.png'
 
 input "type:keyboard" {
     xkb_options ctrl:nocaps
@@ -68,7 +69,7 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-bindsym $mod+Ctrl+l exec swaylock -f -c 00ffff -e -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png
+bindsym $mod+Ctrl+l exec swaylock -f -c 00ffff -e -i /usr/share/hyprland/wall2.png
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
 bindsym $mod+3 workspace number 3
@@ -120,6 +121,7 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
+bindsym $mod+o exec swaymsg [app_id="__focused__"] opacity set 0.91
 bar {
     position top
     status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
