[update] tmux: history limit

--- a/dots/tmux.conf
+++ b/dots/tmux.conf
@@ -8,6 +8,7 @@ set -g pane-border-format "#{pane_index} #{pane_current_command}"
 #set -g mouse on
 
 set -g display-panes-time 4000
+set-option -g history-limit 20000
 
 #set-option -g status-justify centre
 
